# hdtSMP-force-fields-NG

./: CMakeLists.txt  CMakePresets.json  HDT-SMP Force Fields.ini  README.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: build.yml
cmake/: Plugin.h.in
hdtSMP-force-fields/: ForceFieldManager.cpp  ForceFieldManager.h  PluginHelper.h  main.cpp
hdtSMP-force-fields/objects/: Explosion_traits.h
include/hdtSMP64/: PluginAPI.h
